Add lab content.